Adjustements to run with newer Java versions